overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -187,25 +187,25 @@ label[for="file-input"]:hover {
 }
 
 /* For WebKit browsers like Chrome, Safari, and Opera */
-#chat-area::-webkit-scrollbar, #interpreter-area::-webkit-scrollbar, #interpreter-output::-webkit-scrollbar {
+#chat-area::-webkit-scrollbar, #interpreter-area::-webkit-scrollbar, #interpreter-output::-webkit-scrollbar, .sidebar::-webkit-scrollbar {
   width: 6px; /* Adjust the width of the scrollbar */
   max-height: 5px; /* Adjust the height of the scrollbar */
 
 }
 
-#chat-area::-webkit-scrollbar-track, #interpreter-area::-webkit-scrollbar-track, #interpreter-output::-webkit-scrollbar-track {
+#chat-area::-webkit-scrollbar-track, #interpreter-area::-webkit-scrollbar-track, #interpreter-output::-webkit-scrollbar-track, .sidebar::-webkit-scrollbar-track {
   background-color: transparent; /* Make the track/background transparent */
 
 }
 
-#chat-area::-webkit-scrollbar-thumb, #interpreter-area::-webkit-scrollbar-thumb, #interpreter-output::-webkit-scrollbar-thumb {
+#chat-area::-webkit-scrollbar-thumb, #interpreter-area::-webkit-scrollbar-thumb, #interpreter-output::-webkit-scrollbar-thumb, .sidebar::-webkit-scrollbar-thumb {
   background-color: rgba(154, 225, 157, 0); /* Adjust the color of the scrollbar thumb and set initial opacity to 0 */
   border-radius: 3px;
   transition: background-color 3.0s ease-in-out;
       }
 
 #chat-area:hover::-webkit-scrollbar-thumb, #interpreter-area:hover::-webkit-scrollbar-thumb, #interpreter-output:hover::-webkit-scrollbar-thumb,
-#chat-area:active::-webkit-scrollbar-thumb, #interpreter-area:active::-webkit-scrollbar-thumb, #interpreter-output:active::-webkit-scrollbar-thumb {
+#chat-area:active::-webkit-scrollbar-thumb, #interpreter-area:active::-webkit-scrollbar-thumb, #interpreter-output:active::-webkit-scrollbar-thumb, .sidebar:hover::-webkit-scrollbar-thumb, .sidebar:active::-webkit-scrollbar-thumb, .sidebar::-webkit-scrollbar-thumb {
 
   transition: background-color 3.0s ease-in-out;
   background-color: rgba(154, 225, 157, 1); /* Change the opacity of the scrollbar thumb to 1 when hovering over or actively scrolling the container */
@@ -245,6 +245,7 @@ label[for="file-input"]:hover {
   background-color: #474A48;
   border-radius: 5px;
   overflow-y: auto; */
+  overflow-y: scroll;
 
 }
 
